<resources>
    <string name="app_name">Zerobin</string>
    <string name="title_home">Home</string>
    <string name="title_review">Review</string>
    <string name="title_my_page">My Page</string>
    <string name="picture">사진</string>
    <string name="feature">특징</string>
    <string name="review">리뷰</string>
    <string name="hashtag">해시태그</string>
    <string name="make_review">리뷰작성</string>
    <string name="modify_review">리뷰수정</string>
    <string name="review_picture_description">방문한 매장과 관련된\n사진을 업로드해주세요.</string>
    <string name="review_text_description">방문한 매장과 관련된\n리뷰를 작성해주세요.</string>
    <string name="review_picture_initial_count">0/3</string>
    <string name="review_text_initial_count">%s/200</string>
    <string name="select_hashtag_description">매장과 관련된 해시태그를 골라주세요! (최대 8개)</string>
    <string name="review_text_length_description">10글자 이상 자유롭게 후기를 적어주세요!</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="review_seed_description1">방문한 가게에서 환경보호를 위한\n노력이 느껴졌다면,</string>
    <string name="review_seed_description2">씨앗을 눌러 새싹을 피워주세요!</string>
    <string name="review_seed_description_bloom">착한 매장, 착한 소비로\n새싹이 피어났어요!</string>
    <string name="filter_description1">친환경 소비에 대해 관심있는\n 키워드를 골라주세요!</string>
    <string name="filter_description2">당신에게 딱 맞는 스토어를 가장 먼저 보여드릴게요.</string>
    <string name="review_filter_description2">관련된 리뷰를 가장 먼저 보여드릴게요.</string>
    <string name="filter_button_text">친환경 소비 시작하기</string>
    <string name="review_filter_button_text">적용</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="delete_account">회원탈퇴</string>
    <string name="review_filter_description1">원하는 친환경 키워드를\n 자유롭게 골라보세요!</string>
    <string name="search_empty_description">앗, 찾으시는 스토어가 없어요.\n다른 가게를 검색해 보는건 어떠세요?</string>
    <string name="review_empty_description">앗, 아직 리뷰가 없어요.\n방문하신 매장 리뷰를 남겨주세요!</string>
    <string name="shop_empty_description">앗, 찜한 스토어가 없어요.\n방문하고 싶은 매장이 있다면 찜해주세요!</string>
    <string name="stamp_empty_description">앗, 아직 스탬프가 없어요.\n방문하신 매장에 새싹스탬프를 남겨주세요!</string>
    <string name="my_page_guide_login_before">로그인하고 가치있는 친환경 소비를 경험하세요!</string>
    <string name="my_page_guide_login_after">오늘도 환경을 사랑하는 가치소비를 실천해볼까요?</string>
    <string name="need_login_description">먼저 로그인이 필요해요 :D\n로그인 페이지로 이동하시겠어요?</string>
    <string name="logout_description">정말로 로그아웃하시겠어요?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="hash_tag_format">#%s</string>
    <string name="review_image_page_format">%d/%d</string>
    <string name="image_page_format">%d / %d</string>
    <string name="my_page_stamp_title">내가 남긴 새싹스탬프</string>
    <string name="my_page_review_title">내가 쓴 리뷰</string>
    <string name="my_page_shop_title">찜한가게</string>
</resources>