<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.shop.WriteReviewSeedActivity">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="24dp"
            android:scaleType="center"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/seedDescription1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/review_seed_description1"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/seedDescription2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/seedDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/review_seed_description2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@id/seedImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seedDescription1" />

        <ImageView
            android:id="@+id/seedImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_favorite_border_24px"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seedDescription2"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="50dp"
            android:text="@string/next"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>