<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.shop.zerobin.ui.review.ReviewFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_review" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shop.zerobin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_review2"
            app:destination="@id/navigation_review"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_my_page"
            app:destination="@id/navigation_my_page"
            app:popUpTo="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.shop.zerobin.ui.mypage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page">
        <action
            android:id="@+id/action_navigation_my_page_to_navigation_my_page_review"
            app:destination="@id/navigation_my_page_review"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_page_to_navigation_my_page_stamp"
            app:destination="@id/navigation_my_page_stamp"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_page_to_navigation_my_page_shop"
            app:destination="@id/navigation_my_page_shop"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_page_to_navigation_sign_in"
            app:destination="@id/navigation_sign_in"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_my_page_to_navigation_nick_change"
            app:destination="@id/navigation_my_page_nick_change"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_page_nick_change"
        android:name="com.shop.zerobin.ui.mypage.MyPageNickChangeFragment"
        android:label="MyPageNickChangeFragment"
        tools:layout="@layout/fragment_my_page_nick_change" />

    <fragment
        android:id="@+id/navigation_my_page_shop"
        android:name="com.shop.zerobin.ui.mypage.MyPageShopFragment"
        android:label="MyPageShopFragment"
        tools:layout="@layout/fragment_my_page_shop" />

    <fragment
        android:id="@+id/navigation_my_page_review"
        android:name="com.shop.zerobin.ui.mypage.MyPageReviewFragment"
        android:label="MyPageReviewFragment"
        tools:layout="@layout/fragment_my_page_review" />

    <fragment
        android:id="@+id/navigation_my_page_stamp"
        android:name="com.shop.zerobin.ui.mypage.MyPageStampFragment"
        android:label="MyPageStampFragment"
        tools:layout="@layout/fragment_my_page_stamp" />

    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="com.shop.zerobin.ui.mypage.sign.SignInFragment"
        android:label="SignInFragment"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_sign_up"
            app:destination="@id/navigation_sign_up"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/anim_nothing"
            app:popEnterAnim="@anim/anim_nothing"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sign_up"
        android:name="com.shop.zerobin.ui.mypage.sign.SignUpFragment"
        android:label="SignUpFragment"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_navigation_sign_up_to_navigation_my_page"
            app:destination="@id/navigation_my_page" />
    </fragment>
</navigation>