<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="VM"
            type="com.shop.zerobin.ui.home.shop.WriteReviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clipToPadding="false"
        android:paddingTop="20dp"
        tools:context=".ui.home.shop.WriteReviewFragment">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/writeReviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{VM.isModifyState ? @string/modify_review : @string/make_review}"
            android:textColor="#000000"
            android:textSize="17dp"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnBack"
            tools:text="@string/make_review" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="30dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/writeReviewTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineStart"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="30dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineEnd"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="30dp" />

                <TextView
                    android:id="@+id/seedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="새싹 스탬프"
                    android:textColor="#272727"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/seedSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="친환경 스토어를 칭찬하는 새싹 스탬프를 찍어주세요!"
                    android:textColor="#272727"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/seedTitle" />

                <ImageView
                    android:id="@+id/imageSeed"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:background="@{VM.seed ? @drawable/seed_bg_bloom : @drawable/seed_bg}"
                    android:onClick="@{() -> VM.onSeedClick()}"
                    android:padding="10dp"
                    android:src="@{VM.seed ? @drawable/ic_pistachio_bloom : @drawable/ic_pistachio}"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@+id/seedSubTitle"
                    tools:background="@drawable/seed_bg_bloom"
                    tools:src="@drawable/ic_pistachio_bloom" />

                <androidx.constraintlayout.widget.Group
                    visible="@{VM.isModifyState}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="seedTitle, seedSubTitle, imageSeed" />

                <TextView
                    android:id="@+id/pictureTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/picture"
                    android:textColor="#272727"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/imageSeed"
                    app:layout_goneMarginTop="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text='@{VM.imageCount.toString() + "/3"}'
                    android:textColor="#797979"
                    android:textSize="13dp"
                    app:layout_constraintBottom_toBottomOf="@id/pictureTitle"
                    app:layout_constraintStart_toEndOf="@id/pictureTitle"
                    app:layout_constraintTop_toTopOf="@id/pictureTitle"
                    tools:text="0/3" />

                <ImageView
                    android:id="@+id/pictureIndex1"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_select_picture"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/pictureTitle" />

                <ImageView
                    android:id="@+id/pictureCancel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    android:layout_marginBottom="54dp"
                    android:src="@drawable/ic_cancel_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/pictureIndex1"
                    app:layout_constraintStart_toStartOf="@id/pictureIndex1"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/pictureIndex2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_select_picture"
                    app:layout_constraintBottom_toBottomOf="@id/pictureIndex1"
                    app:layout_constraintStart_toEndOf="@id/pictureIndex1"
                    app:layout_constraintTop_toTopOf="@id/pictureIndex1" />

                <ImageView
                    android:id="@+id/pictureCancel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    android:layout_marginBottom="54dp"
                    android:src="@drawable/ic_cancel_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/pictureIndex2"
                    app:layout_constraintStart_toStartOf="@id/pictureIndex2" />

                <ImageView
                    android:id="@+id/pictureIndex3"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_select_picture"
                    app:layout_constraintBottom_toBottomOf="@id/pictureIndex1"
                    app:layout_constraintStart_toEndOf="@id/pictureIndex2"
                    app:layout_constraintTop_toTopOf="@id/pictureIndex1" />

                <ImageView
                    android:id="@+id/pictureCancel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="54dp"
                    android:layout_marginBottom="54dp"
                    android:src="@drawable/ic_cancel_24"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/pictureIndex3"
                    app:layout_constraintStart_toStartOf="@id/pictureIndex3" />

                <TextView
                    android:id="@+id/reviewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/review"
                    android:textColor="#272727"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/pictureIndex1" />

                <TextView
                    android:id="@+id/reviewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/review_text_length_description"
                    android:textColor="#272727"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/reviewTitle" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textLayout"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_write_review_text"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/reviewDescription">

                    <ImageView
                        android:id="@+id/textDescriptionImage"
                        visible="@{VM.reviewGuideVisible}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cil_pen"
                        app:layout_constraintBottom_toTopOf="@id/textDescription"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textDescription"
                        visible="@{VM.reviewGuideVisible}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:text="@string/review_text_description"
                        android:textColor="#797979"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textDescriptionImage" />

                    <EditText
                        android:id="@+id/inputReview"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="14dp"
                        android:layout_marginVertical="10dp"
                        android:background="@null"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:scrollbars="vertical"
                        android:text="@={VM.inputText}"
                        android:textColor="#797979"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@{@string/review_text_initial_count(VM.inputText.length())}"
                        android:textSize="11dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="0/200" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/hashTagTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/hashtag"
                    android:textColor="#272727"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/textLayout" />

                <TextView
                    android:id="@+id/hashTagDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/select_hashtag_description"
                    android:textColor="#272727"
                    android:textSize="13dp"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/hashTagTitle" />

                <include
                    android:id="@+id/hashTagContainer"
                    layout="@layout/layout_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hashTagDescription" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnComplete"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/bg_long_button"
                    android:onClick="@{() -> VM.onClickComplete()}"
                    android:text="@string/complete"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/hashTagContainer" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>